[hs_AuthService] refresh token, saving sessions in app