@@ -5,13 +5,12 @@ import com.hs.authenticationservice.common.exception.BusinessException;
 import com.hs.authenticationservice.common.exception.KeycloakResponseStatusException;
 import com.hs.authenticationservice.common.helper.JwkSet;
 import com.hs.authenticationservice.common.properties.KeycloakProperties;
-import com.hs.authenticationservice.service.to.input.DeleteInfoTo;
-import com.hs.authenticationservice.service.to.input.LoginTo;
-import com.hs.authenticationservice.service.to.input.LogoutTo;
-import com.hs.authenticationservice.service.to.input.RegisterInfoTo;
+import com.hs.authenticationservice.service.impl.KeycloakUserService;
+import com.hs.authenticationservice.service.to.input.*;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.security.SignatureException;
+import jakarta.ws.rs.NotFoundException;
 import jakarta.ws.rs.core.Response;
 import org.keycloak.OAuth2Constants;
 import org.keycloak.admin.client.Keycloak;
@@ -25,29 +24,35 @@ import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 @Service
-public class KeycloakUserService {
+public class KeycloakUserServiceImpl implements KeycloakUserService {
 
     private static final String USER_NOT_CREATED = "New user won't be created!";
     private static final String USER_NOT_DELETED = "User cannot be deleted!";
     private static final String USER_NOT_FOUND = "User not found!";
+    private static final String USER_NOT_LOGGED_IN = "User wasn't logged in!";
     private static final String USER_NOT_LOGGED_OUT = "User wasn't logged out!";
     private static final String CERTS_NOT_AVAILABLE = "Certificates are not available!";
+
+    private static final String TOKEN_NOT_REFRESHED = "Token could not been refreshed";
+    private static final String USER_LOGGED_OUT = "User was logged out.";
     private static final String AUTH_ACTIONS_NOT_POSSIBLE = "Auth actions not possible!";
 
     private final KeycloakProperties kcProps;
 
-    private final Keycloak keycloak;
+    private final Keycloak keycloakAdmin;
 
-    public KeycloakUserService(KeycloakProperties kcProps, Keycloak keycloak) {
+    private final Map<String, Keycloak> loggedInUsers;
+
+    public KeycloakUserServiceImpl(KeycloakProperties kcProps, Keycloak keycloakAdmin) {
         this.kcProps = kcProps;
-        this.keycloak = keycloak;
+        this.keycloakAdmin = keycloakAdmin;
+        this.loggedInUsers = new HashMap<>();
     }
 
+    @Override
     public AccessTokenResponse login(LoginTo login) {
         Keycloak kc = KeycloakBuilder.builder()
                 .serverUrl(kcProps.getServerUrl())
@@ -59,14 +64,23 @@ public class KeycloakUserService {
                 .password(login.getPassword())
                 .build();
 
+        this.loggedInUsers.put(login.getLogin(), kc);
+
         return kc.tokenManager().getAccessToken();
     }
 
+    @Override
     public void logout(LogoutTo logoutTo) {
-        Claims claims = parseToken(logoutTo.getAccessToken(), getPublicKeys());
-        this.keycloak.realms().realm(this.kcProps.getTargetRealm()).deleteSession(claims.get("sid", String.class));
+        Claims claims = parseToken(logoutTo.getAccessToken());
+        Keycloak userKeycloak = this.loggedInUsers.get(claims.get("email", String.class));
+        if (userKeycloak == null) {
+            endUserSessionManually(claims);
+        } else {
+            userKeycloak.tokenManager().logout();
+        }
     }
 
+    @Override
     public void registerNewUser(RegisterInfoTo registerInfoTo) {
         UserRepresentation newUser = buildNewUser(registerInfoTo);
         Response response = this.getUsersResource().create(newUser);
@@ -75,6 +89,7 @@ public class KeycloakUserService {
         }
     }
 
+    @Override
     public void sendVerificationEmail(String email) {
         List<UserRepresentation> foundUsers = this.getFoundUsers(email);
         if (!foundUsers.isEmpty()) {
@@ -83,6 +98,7 @@ public class KeycloakUserService {
         }
     }
 
+    @Override
     public void deleteUser(DeleteInfoTo deleteInfoTo) {
         List<UserRepresentation> foundUsers = getFoundUsers(deleteInfoTo.getEmail());
         if (!foundUsers.isEmpty()) {
@@ -97,6 +113,20 @@ public class KeycloakUserService {
                     .consequences(USER_NOT_DELETED)
                     .build());
     }
+
+    @Override
+    public AccessTokenResponse refreshAccessToken(RefreshTokenTo refreshTokenTo) {
+        Claims claims = parseToken(refreshTokenTo.getToken());
+        Keycloak userKeycloak = this.loggedInUsers.get(claims.get("email", String.class));
+        if (userKeycloak != null) {
+            return userKeycloak.tokenManager().refreshToken();
+        } else {
+            endUserSessionManually(claims);
+            throw new KeycloakResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR,
+                    ErrorStatus.builder().errorMessages(Set.of(TOKEN_NOT_REFRESHED)).consequences(USER_LOGGED_OUT).build());
+        }
+    }
+
 
     private List<UserRepresentation> getFoundUsers(String email) {
         return this.getUsersResource().searchByEmail(email, true);
@@ -113,7 +143,7 @@ public class KeycloakUserService {
     }
 
     private UsersResource getUsersResource() {
-        return keycloak.realm(kcProps.getTargetRealm()).users();
+        return keycloakAdmin.realm(kcProps.getTargetRealm()).users();
     }
 
     private UserRepresentation buildNewUser(RegisterInfoTo registerInfoTo) {
@@ -132,6 +162,30 @@ public class KeycloakUserService {
         credential.setType(CredentialRepresentation.PASSWORD);
         credential.setValue(registerInfoTo.getPassword());
         return List.of(credential);
+    }
+
+
+    private Claims parseToken(String token) {
+        SignatureException signatureException = null;
+        JwkSet publicKeys = getPublicKeys();
+        for (JwkSet.Jwk jwk : publicKeys.getKeys()) {
+            try {
+                return Jwts.parser()
+                        .verifyWith(jwk.transformToPublicKey()).build().parseSignedClaims(token).getPayload();
+            } catch (IllegalArgumentException e) {
+                throw new KeycloakResponseStatusException(HttpStatus.UNAUTHORIZED, ErrorStatus.builder()
+                        .errorMessages(Collections.singleton(e.getMessage()))
+                        .consequences(AUTH_ACTIONS_NOT_POSSIBLE)
+                        .build());
+            } catch (SignatureException e) {
+                signatureException = e;
+            }
+        }
+        assert signatureException != null;
+        throw new KeycloakResponseStatusException(HttpStatus.UNAUTHORIZED, ErrorStatus.builder()
+                .errorMessages(Collections.singleton(signatureException.getMessage()))
+                .consequences(AUTH_ACTIONS_NOT_POSSIBLE)
+                .build());
     }
 
     private JwkSet getPublicKeys() {
@@ -156,25 +210,13 @@ public class KeycloakUserService {
         }
     }
 
-    public Claims parseToken(String token, JwkSet jwkSet) {
-        SignatureException signatureException = null;
-        for (JwkSet.Jwk jwk : jwkSet.getKeys()) {
-            try {
-                return Jwts.parser()
-                        .verifyWith(jwk.transformToPublicKey()).build().parseSignedClaims(token).getPayload();
-            } catch (IllegalArgumentException e) {
-                throw new KeycloakResponseStatusException(HttpStatus.UNAUTHORIZED, ErrorStatus.builder()
-                        .errorMessages(Collections.singleton(e.getMessage()))
-                        .consequences(AUTH_ACTIONS_NOT_POSSIBLE)
-                        .build());
-            } catch (SignatureException e) {
-                signatureException = e;
-            }
+    private void endUserSessionManually(Claims claims) {
+        try {
+            this.keycloakAdmin.realms().realm(this.kcProps.getTargetRealm()).deleteSession(claims.get("sid",
+                    String.class));
+        } catch (NotFoundException e) {
+            throw new KeycloakResponseStatusException(HttpStatus.NOT_FOUND,
+                    ErrorStatus.builder().errorMessages(Set.of(USER_NOT_LOGGED_IN)).consequences(USER_NOT_LOGGED_OUT).build());
         }
-        assert signatureException != null;
-        throw new KeycloakResponseStatusException(HttpStatus.UNAUTHORIZED, ErrorStatus.builder()
-                .errorMessages(Collections.singleton(signatureException.getMessage()))
-                .consequences(AUTH_ACTIONS_NOT_POSSIBLE)
-                .build());
     }
 }
